Añadiendo bootstrap al sitio

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<link rel="stylesheet"  href="styles.css" />
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="icon"  href="img/logo3.png" type="image/png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet"  href="./css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Grupo Brand</title>
@@ -70,11 +71,63 @@
 			<img class="quienesSomos__img" src="./img/quienes_somos.jfif" alt="Nosotros">
 		</section>
 		<section>
-			<h1 class="quienesSomos__title">¿Quiénes somos?</h1>
+			<h1 class="quienesSomos__title">¿Qué hacemos?</h1>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver mas</a>
 		</section>
 	</section>
+
+	<div class="card-group">
+		<div class="card">
+		  <img class="card-img-top" src="./img/4.png" alt="Card image cap">
+		  <div class="card-body">
+			<h5 class="card-title">Marca > Producto</h5>
+			<p class="card-text">La marca define a la empresa,
+				la identifica y la distingue positiva o
+				negativamente del resto de la competencia.
+				La personalidad de una marca
+				está configurada por la experiencia, los
+				conocimientos, los valores y las ventajas
+				competitivas de la empresa. Los productos,
+				los servicios, la imagen, los mensajes
+				comerciales y las relaciones
+				con los clientes también la definen
+				constantemente.</p>
+		  </div>
+		  <!-- <div class="card-footer">
+			<small class="text-muted">Last updated 3 mins ago</small>
+		  </div> -->
+		</div>
+		<div class="card">
+		  <img class="card-img-top" src="./img/3.png" alt="Card image cap">
+		  <div class="card-body">
+			<h5 class="card-title">¿Quiénes somos?</h5>
+			<p class="card-text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
+		  </div>
+		  <!-- <div class="card-footer">
+			<small class="text-muted">Last updated 3 mins ago</small>
+		  </div> -->
+		</div>
+		<div class="card">
+		  <img class="card-img-top" src="./img/4.png" alt="Card image cap">
+		  <div class="card-body">
+			<h5 class="card-title">Siempre la misma historia</h5>
+			<p class="card-text">Actualmente una empresa
+				esta obligada a transformarse
+				continuamente. Aplicar la misma
+				formula ya no es una garantia éxito.
+				Utilizar nuevas vías para
+				diferenciarse mostrando nuestras
+				singularidades y para llegar
+				al consumidor son requisitos
+				básicos que toda marca debe
+				afrontar diariamente.</p>
+		  </div>
+		  <!-- <div class="card-footer">
+			<small class="text-muted">Last updated 3 mins ago</small>
+		  </div> -->
+		</div>
+	  </div>
 
 	<h1 class="h1titles">Que hacemos</h1>
 	<main id="grilla" >
@@ -188,6 +241,8 @@
 		<a class= "footerTexto" href="https://www.instagram.com/grupo.brand/">Ir a nuestro instagram</a>
 		<a class= "footerTexto" href="contacto.html">Contactanos</a>	
 	</footer> -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
 </html>
 
