--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<link rel="stylesheet"  href="../styles.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet"  href="../css/styles.css" />
 	<link rel="icon"   href="../img/logo3.png" type="image/png" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,8 +28,6 @@
 					<a class="menu__link" href="./equipo.html">Nuestro Equipo</a></li>
 				<li>
 					<a class="menu__link" href="./contacto.html">Contactanos</a></li>
-				<!-- <li>
-					<a class="menu__link" href="https://www.instagram.com/grupo.brand/">Instagram</a></li> -->
 			</ul>
 		</nav>
 	</header>
@@ -36,31 +35,32 @@
 	<section>
 		<h1>CONTACTO</h1>
 	</section>
+
+	<form>
+		<div class="form-group">
+		  <label for="exampleInputEmail1">Email address</label>
+		  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+		  <small id="emailHelp" class="form-text text-muted">Ingresa tu email</small>
+		</div>
+		<div class="form-group">
+		  <label for="exampleInputPassword1">Password</label>
+		  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+		</div>
+		<div class="form-check">
+		  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+		  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+		</div>
+		<button type="submit" class="btn btn-primary">Submit</button>
+	  </form>
+
+
 	
 	<!-- formulario de contacto -->
-	<section>
-		<article>
-			<form action="#">
-				<label for="NOMBRE">NOMBRE:
-					<input type="text" placeholder="ej. Juan" ><br>
-					<label for="APELLIDO">APELLIDO:
-						<input type="text" placeholder="ej. Campi" ><br>
-				<label for="email">Email:
-					<input type="email" placeholder="aaa@gmail.com" name="email"><br>
-				</label>
-				<label for="Observaciones"> ¡Dejanos un mensaje!<br>
-					<textarea placeholder="Mensaje"></textarea>
-				</label> <br>
-				<input type="number" placeholder="DECIME TU EDAD"><br>
-				<div><p>¿Te gustó nuestro sitio?:</p>
-					<div>Sí
-						<input type="radio" name="Sí" value="izquierda">
-					</div>
-					<div>No
-						<input type="radio" name="No" value="derecha">
-					</div>
-				</div>
-    </section>
+		  <!-- <div class="card-footer">
+			<small class="text-muted">Last updated 3 mins ago</small>
+		  </div> -->
+		</div>
+	  </div>
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
@@ -69,4 +69,6 @@
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
