--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<link rel="stylesheet"  href="../styles.css" />
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet"  href="../css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Nuestro equipo</title>
@@ -33,6 +34,24 @@
 		</nav>
 	</header>
 
+	<div class="card mb-3">
+		<img class="card-img-top" src="../img/c1.png" alt="Card image cap">
+		<div class="card-body">
+		  <h5 class="card-title">"Juan"</h5>
+		  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+		</div>
+	  </div>
+	  <div class="card mb-3">
+		<img class="card-img-top" src="../img/c2.png" alt="Card image cap">
+		<div class="card-body">
+		  <h5 class="card-title">"Turco"</h5>
+		  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+		</div>
+	  </div>
+	
+
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
@@ -41,4 +60,6 @@
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
