--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<link rel="stylesheet"  href="../styles.css" />
-	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
+	<link rel="icon"   href="../img/logo3.png" type="image/png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet"  href="../css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Nosotros</title>
@@ -37,6 +38,52 @@
 		<img id="fotoEdificio" src="../img/quienes_somos.jfif"/>
 		<p>Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo</p>
 	</section>
+	<div class="card-group">
+		<div class="card">
+		  <img class="card-img-top" src="../img/4.png" alt="Card image cap">
+		  <div class="card-body">
+			<h5 class="card-title">Marca > Producto</h5>
+			<p class="card-text">La marca define a la empresa,
+				la identifica y la distingue positiva o
+				negativamente del resto de la competencia.
+				La personalidad de una marca
+				está configurada por la experiencia, los
+				conocimientos, los valores y las ventajas
+				competitivas de la empresa. Los productos,
+				los servicios, la imagen, los mensajes
+				comerciales y las relaciones
+				con los clientes también la definen
+				constantemente.</p>
+		  </div>
+		  <!-- <div class="card-footer">
+			<small class="text-muted">Last updated 3 mins ago</small>
+		  </div> -->
+		</div>
+		<div class="card">
+		  <img class="card-img-top" src="../img/3.png" alt="Card image cap">
+		  <div class="card-body">
+			<h5 class="card-title">¿Quiénes somos?</h5>
+			<p class="card-text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
+		  </div>
+		  <!-- <div class="card-footer">
+			<small class="text-muted">Last updated 3 mins ago</small>
+		  </div> -->
+		</div>
+		<div class="card">
+		  <img class="card-img-top" src="../img/4.png" alt="Card image cap">
+		  <div class="card-body">
+			<h5 class="card-title">Siempre la misma historia</h5>
+			<p class="card-text">Actualmente una empresa
+				esta obligada a transformarse
+				continuamente. Aplicar la misma
+				formula ya no es una garantia éxito.
+				Utilizar nuevas vías para
+				diferenciarse mostrando nuestras
+				singularidades y para llegar
+				al consumidor son requisitos
+				básicos que toda marca debe
+				afrontar diariamente.</p>
+		  </div>
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
@@ -45,4 +92,6 @@
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
