--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<link rel="stylesheet"  href="../styles.css" />
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet"  href="../css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| ¿Que hacemos?</title>
@@ -32,27 +33,56 @@
 			</ul>
 		</nav>
 	</header>
+
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img class="d-block w-100" src="../img/b1.png" alt="First slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="../img/b2.png" alt="Second slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="../img/b3.png" alt="Third slide">
+		  </div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Next</span>
+		</a>
+	</div>
+
 	<section>
 		<h1>¿Qué hacemos?</h1>
 	</section>
-	<main id="grilla">
-		<section id="IMG1">
+	<main id="grilla" >
+		<section id="IMG1" class="textWithBlurredBg" >
 			<img src="../img/1.png" alt="IMG1" width="100%">
+			<h2>Branding</h2>
 		</section>
-		<section id="IMG2">
+		<section id="IMG2" class="textWithBlurredBg">
 			<img src="../img/2.png" alt="IMG2" width="100%">
+			<h2>Social Media</h2>
 		</section>
-		<section id="IMG3">
+		<section id="IMG3" class="textWithBlurredBg">
 			<img src="../img/3.png" alt="IMG3" width="100%">
+			<h2>Diseño</h2>
 		</section>
-		<section id="IMG4">
+		<section id="IMG4" class="textWithBlurredBg">
 			<img src="../img/4.png" alt="IMG4" width="100%">
+			<h2>Creatividad</h2>
 		</section>
-		<section id="IMG5">
+		<section id="IMG5" class="textWithBlurredBg">
 			<img src="../img/5.png" alt="IMG5" width="100%">
+			<h2>Fotografía</h2>
 		</section>
-		<section id="IMG6">
+		<section id="IMG6" class="textWithBlurredBg">
 			<img src="../img/6.png" alt="IMG6" width="100%">
+			<h2>Diseño Web</h2>
 		</section>
 	</main>
     <table class="default">
@@ -86,4 +116,6 @@
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
 	</footer>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
 </body>
