--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -4,6 +4,7 @@
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet"  href="../css/styles.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| ¿Que hacemos?</title>
@@ -33,8 +34,10 @@
 			</ul>
 		</nav>
 	</header>
-
-	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	<div class="parallax3"> 
+	</div>
+	<h1 id="h1titles" class="animate__animated animate__bounce">¿Qué hacemos?</h1>
+	<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
 			<img class="d-block w-100" src="../img/b1.png" alt="First slide">
@@ -54,7 +57,7 @@
 		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 		  <span class="sr-only">Next</span>
 		</a>
-	</div>
+	</div> -->
 
 	<section>
 		<h1>¿Qué hacemos?</h1>
@@ -85,7 +88,7 @@
 			<h2>Diseño Web</h2>
 		</section>
 	</main>
-    <table class="default">
+    <!-- <table class="default">
         <tr>				  
 			<th>SERVICIOS</th>				  
 			<th>PRECIO</th>				  
@@ -107,7 +110,41 @@
 			<td>Dos meses</td>	
 		</tr>
       
-      </table>
+      </table> -->
+	  <h1 class="h1titles">Tarifas</h1>
+	  <div id="tableId">
+		<table class="table">
+			<thead>
+			<tr>
+				<!-- <th scope="col"></th> -->
+				<th scope="col">Servicios</th>
+				<th scope="col">Precio</th>
+				<th scope="col">Duración</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+				<!-- <th scope="row"></th> -->
+				<td>Gestión de redes sociales</td>
+				<td>$4.000/ mes</td>
+				<td>Mensual</td>
+			</tr>
+			<tr>
+				<!-- <th scope="row"></th> -->
+				<td>Branding</td>
+				<td>$13.000</td>
+				<td>1 Mes</td>
+			</tr>
+			<tr>
+				<!-- <th scope="row"></th> -->
+				<td>Diseño Web</td>
+				<td>$25.000</td>
+				<td>1 Mes</td>
+			</tr>
+			</tbody>
+		</table>
+	</div>
+
 	  <footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
