--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -4,6 +4,7 @@
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet"  href="../css/styles.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Nuestro equipo</title>
@@ -33,8 +34,11 @@
 			</ul>
 		</nav>
 	</header>
+	<div class="parallax4"> 
+	</div>
+	<h1 id="h1titles" class="animate__animated animate__bounce">Nuestro Equipo</h1>
 
-	<div class="card mb-3">
+	<div class="card mb-3" id="cardId">
 		<img class="card-img-top" src="../img/c1.png" alt="Card image cap">
 		<div class="card-body">
 		  <h5 class="card-title">"Juan"</h5>
@@ -42,7 +46,7 @@
 		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
 		</div>
 	  </div>
-	  <div class="card mb-3">
+	  <div class="card mb-3" id="cardId">
 		<img class="card-img-top" src="../img/c2.png" alt="Card image cap">
 		<div class="card-body">
 		  <h5 class="card-title">"Turco"</h5>
