--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet"  href="../css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,12 +34,10 @@
 			</ul>
 		</nav>
 	</header>
-    <section>
-		<h1>¿Quiénes somos?</h1>
-		<img id="fotoEdificio" src="../img/quienes_somos.jfif"/>
-		<p>Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo</p>
-	</section>
-	<div class="card-group">
+    <div class="parallax2"> 
+	</div>
+	<h1 id="h1titles" class="animate__animated animate__bounce">Nosotros</h1>
+	<div class="card-group" id="cardId">
 		<div class="card">
 		  <img class="card-img-top" src="../img/4.png" alt="Card image cap">
 		  <div class="card-body">
@@ -84,6 +83,8 @@
 				básicos que toda marca debe
 				afrontar diariamente.</p>
 		  </div>
+		</div>
+	</div>
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
