correcciones de css

--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -58,10 +58,6 @@
 		  <span class="sr-only">Next</span>
 		</a>
 	</div> -->
-
-	<section>
-		<h1>¿Qué hacemos?</h1>
-	</section>
 	<main id="grilla" >
 		<section id="IMG1" class="textWithBlurredBg" >
 			<img src="../img/1.png" alt="IMG1" width="100%">
@@ -111,7 +107,7 @@
 		</tr>
       
       </table> -->
-	  <h1 class="h1titles">Tarifas</h1>
+	  <h1 id="h1titles" class="animate__animated animate__bounce">Tarifas</h1>
 	  <div id="tableId">
 		<table class="table">
 			<thead>
