nuevas correcciones de css/ cambiando los colores por defecto de bootstrap

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 		<div class="card">
 		  <img class="card-img-top" src="./img/4.png" alt="Card image cap">
 		  <div class="card-body">
-			<h5 class="card-title">Marca > Producto</h5>
-			<p class="card-text">La marca define a la empresa,
+			<h5 class="card-title" id="cardTitle">Marca > Producto</h5>
+			<p class="card-text" id="cardText">La marca define a la empresa,
 				la identifica y la distingue positiva o
 				negativamente del resto de la competencia.
 				La personalidad de una marca
@@ -102,8 +102,8 @@
 		<div class="card">
 		  <img class="card-img-top" src="./img/3.png" alt="Card image cap">
 		  <div class="card-body">
-			<h5 class="card-title">¿Quiénes somos?</h5>
-			<p class="card-text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
+			<h5 class="card-title" id="cardTitle">¿Quiénes somos?</h5>
+			<p class="card-text" id="cardText">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 		  </div>
 		  <!-- <div class="card-footer">
 			<small class="text-muted">Last updated 3 mins ago</small>
@@ -112,8 +112,8 @@
 		<div class="card">
 		  <img class="card-img-top" src="./img/4.png" alt="Card image cap">
 		  <div class="card-body">
-			<h5 class="card-title">Siempre la misma historia</h5>
-			<p class="card-text">Actualmente una empresa
+			<h5 class="card-title" id="cardTitle">Siempre la misma historia</h5>
+			<p class="card-text" id="cardText">Actualmente una empresa
 				esta obligada a transformarse
 				continuamente. Aplicar la misma
 				formula ya no es una garantia éxito.
@@ -228,6 +228,7 @@
 			</form>
 		</article>
 	</section> -->
+	<hr class="hr">
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="img/logo3.png" alt="logo de la empresa">
