--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -140,7 +140,7 @@
 			</tbody>
 		</table>
 	</div>
-
+	<hr class="hr">
 	  <footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
