--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,6 +63,7 @@
 		  </div> -->
 		</div>
 	  </div>
+	<hr class="hr">
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
