--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -41,21 +41,21 @@
 	<div class="card mb-3" id="cardId">
 		<img class="card-img-top" src="../img/c1.png" alt="Card image cap">
 		<div class="card-body">
-		  <h5 class="card-title">"Juan"</h5>
-		  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		  <h5 class="card-title" id="cardTitle">"Juan"</h5>
+		  <p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
 		</div>
 	  </div>
 	  <div class="card mb-3" id="cardId">
 		<img class="card-img-top" src="../img/c2.png" alt="Card image cap">
 		<div class="card-body">
-		  <h5 class="card-title">"Turco"</h5>
-		  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+		  <h5 class="card-title" id="cardTitle">"Turco"</h5>
+		  <p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
 		</div>
 	  </div>
 	
-
+	<hr class="hr">
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
