nuevas correcciones responsive

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 	</section>
 	
 	<section  class="quienesSomos">
-		<section class="quienesSomosSection">
+		<section>
 			<img class="quienesSomos__img" src="./img/quienes_somos.jfif" alt="Nosotros">
 		</section>
-		<section>
+		<section class="quienesSomosSection1">
 			<h1 class="quienesSomos__title">¿Qué hacemos?</h1>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver mas</a>
@@ -229,6 +229,7 @@
 		</article>
 	</section> -->
 	<hr class="hr">
+	
 	<footer>
 		<picture class="footer__logo">
 			<img class="footer__img" src="img/logo3.png" alt="logo de la empresa">
