--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="icon"  href="img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet"  href="./css/hamburguer.css" />
 	<link rel="stylesheet"  href="./css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +20,12 @@
 				<img class="header__img"  src="img/logo3.png" alt="logo de la empresa">
 			</a>
 		</picture>
+		<button class="hamburger hamburger--slider" type="button">
+			<span class="hamburger-box">
+			  <span class="hamburger-inner"></span>
+			</span>
+		</button>
+		<input type="checkbox" name="hamburger" id="hamburger"></input>
 		<nav class="navigation">
 			<ul class="menu">
 				<li class="menu__item">						
@@ -157,77 +164,6 @@
 			<h2>Diseño Web</h2>
 		</section>
 	</main>
-
-	<!-- <section>
-		<h1>¿Quiénes somos?</h1>
-		<p id="quienesSomos">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo</p>
-	</section>
-	<img src="img/quienes_somos.jfif"  href="index.html" width=100 alt="logo" id="imagen1"/>
-
-	<table class="default">
-		<tr>				  
-			<th>SERVICIOS</th>				  
-			<th>PRECIO</th>				  
-			<th>DURACIÓN DEL TRABAJO</th>				  
-		</tr>				  
-		<tr>				  
-			<td>Gestión de redes sociales</td>				  
-			<td>$4.000/ mes</td>				  
-			<td>Mensual</td>				  
-		</tr>				  
-		<tr>				  
-			<td>Branding</td>				  
-			<td>$13.000</td>				  
-			<td>Un mes</td>				  
-		</tr>				  
-		<tr>				  
-			<td>Diseño de Páginas web</td>				  
-			<td>$20.000</td>				  
-			<td>Dos meses</td>	
-		</tr>
-	</table> -->
-		
-		<!-- <section>
-		<h1>Contacto</h1>
-	</section>
-	<section>
-		<article>
-			<form action="#">
-				<label for="NOMBRE">Nombre:
-					<input type="text" placeholder="ej. Juan" ><br>
-					<label for="APELLIDO">Apellido:
-						<input type="text" placeholder="ej. Campi" ><br>
-				<label for="email">Email:
-					<input type="email" placeholder="aaa@gmail.com" name="email"><br>
-				</label>
-
-				<label for="Observaciones"> ¡Dejanos un mensaje!<br>
-					<textarea placeholder="Mensaje"></textarea>
-				</label> <br>
-
-				<input type="number" placeholder="DECIME TU EDAD"><br>
-			</div>
-				
-				<div><p>¿Te gustó nuestro sitio?:</p>
-					<div>Sí
-						<input type="radio" name="Sí" value="izquierda">
-					</div>
-					<div>No
-						<input type="radio" name="No" value="derecha">
-					</div>
-				<p>Eres mayor de 18 años?</p>
-				<select name="letra" id="letra"> 
-					<option value="si">SI</option>
-					<option value="no">NO</option>
-				
-				</select>
-				<div>Queres recibir info sobre nosotros?
-				<input type="checkbox" name="acepta" value="1"></div>
-				<input type="submit" value="SI POR FAVOR">
-				<input type="reset" value="NO GRACIAS">
-			</form>
-		</article>
-	</section> -->
 	<hr class="hr">
 	
 	<footer>
