--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
 	<link rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="stylesheet"  href="../css/hamburguer.css" />
 	<link rel="stylesheet"  href="../css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +19,12 @@
 				<img class="header__img"  src="../img/logo3.png" alt="logo de la empresa">
 			</a>
 		</picture>
+		<button class="hamburger hamburger--slider" type="button">
+			<span class="hamburger-box">
+			  <span class="hamburger-inner"></span>
+			</span>
+		</button>
+		<input type="checkbox" name="hamburger" id="hamburger"></input>
 		<nav class="navigation">
 			<ul class="menu">
 				<li class="menu__item">						
@@ -34,9 +41,6 @@
 		</nav>
 	</header>
 
-	<section>
-		<h1>CONTACTO</h1>
-	</section>
 
 	<form id="cardId" >
 		<div class="form-group">
