--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -3,8 +3,9 @@
 <head>
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-	<link rel="stylesheet"  href="../css/styles.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet"  href="../css/hamburguer.css" />
+	<link rel="stylesheet"  href="../css/styles.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| ¿Que hacemos?</title>
@@ -17,6 +18,12 @@
 				<img class="header__img"  src="../img/logo3.png" alt="logo de la empresa">
 			</a>
 		</picture>
+		<button class="hamburger hamburger--slider" type="button">
+			<span class="hamburger-box">
+			  <span class="hamburger-inner"></span>
+			</span>
+		</button>
+		<input type="checkbox" name="hamburger" id="hamburger"></input>
 		<nav class="navigation">
 			<ul class="menu">
 				<li class="menu__item">						
