--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,8 @@
 		</nav>
 	</header>
 
-
+	<div class="parallax5"> 
+	</div>
 	<form id="cardId" >
 		<div class="form-group">
 		  <label for="exampleInputEmail1">Email address</label>
