--- a/index.html
+++ b/index.html
@@ -38,28 +38,11 @@
 					<a class="menu__link" href="pages/equipo.html">Nuestro Equipo</a></li>
 				<li class="menu__item">
 					<a class="menu__link" href="pages/contacto.html">Contactanos</a></li>
-				<!-- <li>
-					<a class="menu__link" href="https://www.instagram.com/grupo.brand/">Instagram</a></li> -->
 			</ul>
 		</nav>
 	</header>
 
-	<!-- <section>
-		<img id="fotoEdificio" src="img/edificio.png" alt="edificio">
-	</section> -->
-	
-
 	<div class="parallax1"> 
-		<!-- <p class="textoImg">
-			"El diseño conlleva innovación,
-			la innovación potencia la marca,
-			la marca construye fidelización y 
-			la fidelización implica
-			beneficios sostenibles.
-			Si quiere obtener beneficios a largo 
-			plazo empiece por invertir en el diseño".
-
-			Marty Neymeier - The Designful Company</p> -->
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">Nosotros</h1>
 	
@@ -67,7 +50,7 @@
 		<section class="quienesSomosSection1">
 			<h1 class="quienesSomos__title">¿Quiénes somos?</h1>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
-			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver mas</a>
+			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver más</a>
 		</section>
 		<section>
 			<img class="quienesSomos__img" src="./img/quienes_somos.jfif" alt="Nosotros">
@@ -81,7 +64,7 @@
 		<section class="quienesSomosSection1">
 			<h1 class="quienesSomos__title">¿Qué hacemos?</h1>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
-			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver mas</a>
+			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver más</a>
 		</section>
 	</section>
 
@@ -102,9 +85,7 @@
 				con los clientes también la definen
 				constantemente.</p>
 		  </div>
-		  <!-- <div class="card-footer">
-			<small class="text-muted">Last updated 3 mins ago</small>
-		  </div> -->
+
 		</div>
 		<div class="card">
 		  <img class="card-img-top" src="./img/3.png" alt="Card image cap">
@@ -112,9 +93,7 @@
 			<h5 class="card-title" id="cardTitle">¿Quiénes somos?</h5>
 			<p class="card-text" id="cardText">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 		  </div>
-		  <!-- <div class="card-footer">
-			<small class="text-muted">Last updated 3 mins ago</small>
-		  </div> -->
+
 		</div>
 		<div class="card">
 		  <img class="card-img-top" src="./img/4.png" alt="Card image cap">
@@ -131,9 +110,7 @@
 				básicos que toda marca debe
 				afrontar diariamente.</p>
 		  </div>
-		  <!-- <div class="card-footer">
-			<small class="text-muted">Last updated 3 mins ago</small>
-		  </div> -->
+>
 		</div>
 	  </div>
 
@@ -166,20 +143,29 @@
 	</main>
 	<hr class="hr">
 	
-	<footer>
+	<footer class="footer">
 		<picture class="footer__logo">
 			<img class="footer__img" src="img/logo3.png" alt="logo de la empresa">
 		</picture>
+		<div>
+			<a href="https://www.instagram.com/grupo.brand">
+				<img class="mediaIcon"  src="img/icon_ig.png" alt="logo de Instagram">
+			</a>
+			<a href="https://www.facebook.com/juan.campi.3l">
+				<img class="mediaIcon"  src="img/icon_fb.png" alt="logo de facebook">
+			</a>
+			<a href="https://www.linkedin.com/in/juan-campi-78775216a/">
+				<img class="mediaIcon"  src="img/icon_linkedin.png" alt="logo de linkedin">
+			</a>
+			<a href="https://https://github.com/juancampi">
+				<img class="mediaIcon"  src="img/icon_github.png" alt="logo de la Git Hub">
+			</a>
+		</div>
 		<section>
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
 	</footer>
 
-	<!-- <footer>
-		<img src="./img/logo3.png" width="50"/>
-		<a class= "footerTexto" href="https://www.instagram.com/grupo.brand/">Ir a nuestro instagram</a>
-		<a class= "footerTexto" href="contacto.html">Contactanos</a>	
-	</footer> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script>
