--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,10 +69,24 @@
 		</div>
 	  </div>
 	<hr class="hr">
-	<footer>
+	<footer class="footer">
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
 		</picture>
+		<div>
+			<a href="https://www.instagram.com/grupo.brand">
+				<img class="mediaIcon"  src="../img/icon_ig.png" alt="logo de Instagram">
+			</a>
+			<a href="https://www.facebook.com/juan.campi.3l">
+				<img class="mediaIcon"  src="../img/icon_fb.png" alt="logo de facebook">
+			</a>
+			<a href="https://www.linkedin.com/in/juan-campi-78775216a/">
+				<img class="mediaIcon"  src="../img/icon_linkedin.png" alt="logo de linkedin">
+			</a>
+			<a href="https://github.com/juancampi">
+				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de la Git Hub">
+			</a>
+		</div>
 		<section>
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
