--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet"  href="./css/hamburguer.css" />
-	<link rel="stylesheet"  href="./css/styles.css" />
+	<link rel="stylesheet"  href="./css/translated.css" />
+	<!-- <link rel="stylesheet"  href="./css/styles.css" />	 -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Grupo Brand</title>
+	<title>Grupo Brand</title>	
+	<meta name="description"
+	content="Bienvenidos al sitio de Grupo Brand">
+	<meta name="keywords"
+	content="Diseño Grafico, Publicidad, Agencia de publicidad, Fotografía, Branding, Redes sociales, RRSS">
 </head>
 <body>
 	<header>
@@ -44,7 +49,7 @@
 
 	<div class="parallax1"> 
 	</div>
-	<h1 id="h1titles" class="animate__animated animate__bounce">Nosotros</h1>
+	<h2 id="h1titles" class="animate__animated animate__bounce">Nosotros</h2>
 	
 	<section  class="quienesSomos">
 		<section class="quienesSomosSection1">
@@ -62,7 +67,7 @@
 			<img class="quienesSomos__img" src="./img/quienes_somos.jfif" alt="Nosotros">
 		</section>
 		<section class="quienesSomosSection1">
-			<h1 class="quienesSomos__title">¿Qué hacemos?</h1>
+			<h2 class="quienesSomos__title">¿Qué hacemos?</h2>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver más</a>
 		</section>
@@ -157,7 +162,7 @@
 			<a href="https://www.linkedin.com/in/juan-campi-78775216a/">
 				<img class="mediaIcon"  src="img/icon_linkedin.png" alt="logo de linkedin">
 			</a>
-			<a href="https://https://github.com/juancampi">
+			<a href="https://github.com/juancampi">
 				<img class="mediaIcon"  src="img/icon_github.png" alt="logo de la Git Hub">
 			</a>
 		</div>
