--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -44,27 +44,7 @@
 	<div class="parallax3"> 
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">¿Qué hacemos?</h1>
-	<!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<img class="d-block w-100" src="../img/b1.png" alt="First slide">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="../img/b2.png" alt="Second slide">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="../img/b3.png" alt="Third slide">
-		  </div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="sr-only">Next</span>
-		</a>
-	</div> -->
+
 	<main id="grilla" >
 		<section id="IMG1" class="textWithBlurredBg" >
 			<img src="../img/1.png" alt="IMG1" width="100%">
@@ -91,29 +71,7 @@
 			<h2>Diseño Web</h2>
 		</section>
 	</main>
-    <!-- <table class="default">
-        <tr>				  
-			<th>SERVICIOS</th>				  
-			<th>PRECIO</th>				  
-			<th>DURACIÓN DEL TRABAJO</th>				  
-		</tr>				  
-		<tr>				  
-			<td>Gestión de redes sociales</td>				  
-			<td>$4.000/ mes</td>				  
-			<td>Mensual</td>				  
-		</tr>				  
-		<tr>				  
-			<td>Branding</td>				  
-			<td>$13.000</td>				  
-			<td>Un mes</td>				  
-		</tr>				  
-		<tr>				  
-			<td>Diseño de Páginas web</td>				  
-			<td>$20.000</td>				  
-			<td>Dos meses</td>	
-		</tr>
-      
-      </table> -->
+
 	  <h1 id="h1titles" class="animate__animated animate__bounce">Tarifas</h1>
 	  <div id="tableId">
 		<table class="table">
@@ -148,10 +106,24 @@
 		</table>
 	</div>
 	<hr class="hr">
-	  <footer>
+	<footer class="footer">
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
 		</picture>
+		<div>
+			<a href="https://www.instagram.com/grupo.brand">
+				<img class="mediaIcon"  src="../img/icon_ig.png" alt="logo de Instagram">
+			</a>
+			<a href="https://www.facebook.com/juan.campi.3l">
+				<img class="mediaIcon"  src="../img/icon_fb.png" alt="logo de facebook">
+			</a>
+			<a href="https://www.linkedin.com/in/juan-campi-78775216a/">
+				<img class="mediaIcon"  src="../img/icon_linkedin.png" alt="logo de linkedin">
+			</a>
+			<a href="https://github.com/juancampi">
+				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de la Git Hub">
+			</a>
+		</div>
 		<section>
 			<p class="footerText"> -GB- Todos los Derechos Reservados a Grupo Brand 2022</p>
 		</section>
