tercera entrega del proyecto final

--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -44,24 +44,24 @@
 	<div class="parallax4"> 
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">Nuestro Equipo</h1>
-
-	<div class="card mb-3" id="cardId">
-		<img class="card-img-top" src="../img/c1.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title" id="cardTitle">"Juan"</h5>
-		  <p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+	<main>
+		<div class="card mb-3" id="cardId">
+			<img class="card-img-top" src="../img/c1.png" alt="Card image cap">
+			<div class="card-body">
+			<h5 class="card-title" id="cardTitle">"Juan"</h5>
+			<p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+			</div>
 		</div>
-	  </div>
-	  <div class="card mb-3" id="cardId">
-		<img class="card-img-top" src="../img/c2.png" alt="Card image cap">
-		<div class="card-body">
-		  <h5 class="card-title" id="cardTitle">"Turco"</h5>
-		  <p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-		  <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+		<div class="card mb-3" id="cardId">
+			<img class="card-img-top" src="../img/c2.png" alt="Card image cap">
+			<div class="card-body">
+			<h5 class="card-title" id="cardTitle">"Turco"</h5>
+			<p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+			</div>
 		</div>
-	  </div>
-	
+	</main>
 	<hr class="hr">
 	<footer class="footer">
 		<picture class="footer__logo">
