--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -44,55 +44,57 @@
     <div class="parallax2"> 
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">Nosotros</h1>
-	<div class="card-group" id="cardId">
-		<div class="card">
-		  <img class="card-img-top" src="../img/4.png" alt="Card image cap">
-		  <div class="card-body">
-			<h5 class="card-title" id="cardTitle">Marca > Producto</h5>
-			<p class="card-text" id="cardText">La marca define a la empresa,
-				la identifica y la distingue positiva o
-				negativamente del resto de la competencia.
-				La personalidad de una marca
-				está configurada por la experiencia, los
-				conocimientos, los valores y las ventajas
-				competitivas de la empresa. Los productos,
-				los servicios, la imagen, los mensajes
-				comerciales y las relaciones
-				con los clientes también la definen
-				constantemente.</p>
-		  </div>
-		  <!-- <div class="card-footer">
-			<small class="text-muted">Last updated 3 mins ago</small>
-		  </div> -->
+	<main>
+		<div class="card-group" id="cardId">
+			<div class="card">
+			<img class="card-img-top" src="../img/4.png" alt="Card image cap">
+			<div class="card-body">
+				<h5 class="card-title" id="cardTitle">Marca > Producto</h5>
+				<p class="card-text" id="cardText">La marca define a la empresa,
+					la identifica y la distingue positiva o
+					negativamente del resto de la competencia.
+					La personalidad de una marca
+					está configurada por la experiencia, los
+					conocimientos, los valores y las ventajas
+					competitivas de la empresa. Los productos,
+					los servicios, la imagen, los mensajes
+					comerciales y las relaciones
+					con los clientes también la definen
+					constantemente.</p>
+			</div>
+			<!-- <div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div> -->
+			</div>
+			<div class="card">
+			<img class="card-img-top" src="../img/3.png" alt="Card image cap">
+			<div class="card-body">
+				<h5 class="card-title" id="cardTitle">¿Quiénes somos?</h5>
+				<p class="card-text" id="cardText">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
+			</div>
+			<!-- <div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div> -->
+			</div>
+			<div class="card">
+			<img class="card-img-top" src="../img/4.png" alt="Card image cap">
+			<div class="card-body">
+				<h5 class="card-title" id="cardTitle">Siempre la misma historia</h5>
+				<p class="card-text" id="cardText">Actualmente una empresa
+					esta obligada a transformarse
+					continuamente. Aplicar la misma
+					formula ya no es una garantia éxito.
+					Utilizar nuevas vías para
+					diferenciarse mostrando nuestras
+					singularidades y para llegar
+					al consumidor son requisitos
+					básicos que toda marca debe
+					afrontar diariamente.</p>
+			</div>
+			</div>
 		</div>
-		<div class="card">
-		  <img class="card-img-top" src="../img/3.png" alt="Card image cap">
-		  <div class="card-body">
-			<h5 class="card-title" id="cardTitle">¿Quiénes somos?</h5>
-			<p class="card-text" id="cardText">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
-		  </div>
-		  <!-- <div class="card-footer">
-			<small class="text-muted">Last updated 3 mins ago</small>
-		  </div> -->
-		</div>
-		<div class="card">
-		  <img class="card-img-top" src="../img/4.png" alt="Card image cap">
-		  <div class="card-body">
-			<h5 class="card-title" id="cardTitle">Siempre la misma historia</h5>
-			<p class="card-text" id="cardText">Actualmente una empresa
-				esta obligada a transformarse
-				continuamente. Aplicar la misma
-				formula ya no es una garantia éxito.
-				Utilizar nuevas vías para
-				diferenciarse mostrando nuestras
-				singularidades y para llegar
-				al consumidor son requisitos
-				básicos que toda marca debe
-				afrontar diariamente.</p>
-		  </div>
-		</div>
-	</div>
-	<hr class="hr">
+	</main>
+		<hr class="hr">
 	<footer class="footer">
 		<picture class="footer__logo">
 			<img class="footer__img" src="../img/logo3.png" alt="logo de la empresa">
