--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,31 +43,32 @@
 
 	<div class="parallax5"> 
 	</div>
-	<form id="cardId" >
-		<div class="form-group">
-		  <label for="exampleInputEmail1">Email address</label>
-		  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-		  <small id="emailHelp" class="form-text text-muted">Ingresa tu email</small>
-		</div>
-		<div class="form-group">
-		  <label for="exampleInputPassword1">Password</label>
-		  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-		</div>
-		<div class="form-check">
-		  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-		  <label class="form-check-label" for="exampleCheck1">Check me out</label>
-		</div>
-		<button type="submit" class="btn btn-primary">Submit</button>
-	  </form>
+	<main>
+		<form id="cardId" >
+			<div class="form-group">
+			<label for="exampleInputEmail1">Email address</label>
+			<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			<small id="emailHelp" class="form-text text-muted">Ingresa tu email</small>
+			</div>
+			<div class="form-group">
+			<label for="exampleInputPassword1">Password</label>
+			<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+			</div>
+			<div class="form-check">
+			<input type="checkbox" class="form-check-input" id="exampleCheck1">
+			<label class="form-check-label" for="exampleCheck1">Check me out</label>
+			</div>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</form>
 
-
-	
-	<!-- formulario de contacto -->
-		  <!-- <div class="card-footer">
-			<small class="text-muted">Last updated 3 mins ago</small>
-		  </div> -->
+	</main>
+		
+		<!-- formulario de contacto -->
+			<!-- <div class="card-footer">
+				<small class="text-muted">Last updated 3 mins ago</small>
+			</div> -->
+			</div>
 		</div>
-	  </div>
 	<hr class="hr">
 	<footer class="footer">
 		<picture class="footer__logo">
