--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Grupo Brand</title>	
 	<meta name="description"
-	content="Bienvenidos al sitio de Grupo Brand">
+	content="Grupo Brand, mucho más que una agencia de publicidad">
 	<meta name="keywords"
 	content="Diseño Grafico, Publicidad, Agencia de publicidad, Fotografía, Branding, Redes sociales, RRSS">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -53,7 +53,8 @@
 	
 	<section  class="quienesSomos">
 		<section class="quienesSomosSection1">
-			<h1 class="quienesSomos__title">¿Quiénes somos?</h1>
+			<h2 class="quienesSomos__h1">Nuestra agencia de publicidad</h1>
+			<h2 class="quienesSomos__title">¿Quiénes somos?</h1>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver más</a>
 		</section>
