por fin pude hacer el index responsive con sass

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<header>
 		<picture class="header__logo">
 			<a href="index.html">
-				<img class="header__img"  src="img/logo3.png" alt="logo de la empresa">
+				<img class="header__img"  src="./img/logo3.png" alt="logo de la empresa">
 			</a>
 		</picture>
 		<button class="hamburger hamburger--slider" type="button">
@@ -35,14 +35,14 @@
 			<ul class="menu">
 				<li class="menu__item">						
 					<a class="menu__link" href="index.html">Inicio</a></li>
-				<li class="menu__item">
-					<a class="menu__link" href="pages/nosotros.html">Sobre Nosotros</a></li>
-				<li class="menu__item">
-					<a class="menu__link" href="pages/quehacemos.html">¿Qué Hacemos?</a></li>						
-				<li class="menu__item">
-					<a class="menu__link" href="pages/equipo.html">Nuestro Equipo</a></li>
-				<li class="menu__item">
-					<a class="menu__link" href="pages/contacto.html">Contactanos</a></li>
+				<li>
+					<a class="menu__link" href="./pages/nosotros.html">Sobre Nosotros</a></li>
+				<li>
+					<a class="menu__link" href="./pages/quehacemos.html">¿Qué Hacemos?</a></li>						
+				<li>
+					<a class="menu__link" href="./pages/equipo.html">Nuestro Equipo</a></li>
+				<li>
+					<a class="menu__link" href="./pages/contacto.html">Contactanos</a></li>
 			</ul>
 		</nav>
 	</header>
