--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet"  href="../css/hamburguer.css" />
-	<link rel="stylesheet"  href="../css/styles.css" />
+	<!-- <link rel="stylesheet"  href="../css/styles.css" /> -->
+	<link rel="stylesheet"  href="../css/translated.css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Nosotros</title>
