--- a/index.html
+++ b/index.html
@@ -50,11 +50,22 @@
 	<div class="parallax1"> 
 	</div>
 	<h2 id="h1titles" class="animate__animated animate__bounce">Nosotros</h2>
+	<!-- <hr class="hr"> -->
 	
+	<div class="iconText">
+		<img src="./img/undraw_Designer_life_re_6ywf2.png" class="icon"> 
+		<p class="frase">"El diseño conlleva innovación,
+			la innovación potencia la marca,
+			la marca construye fidelización y la fidelización implica
+			beneficios sostenibles.
+			Si quiere obtener beneficios a largo plazo empiece por invertir en el diseño".
+			
+			Marty Neymeier - The Designful Company</p>
+	</div>
 	<section  class="quienesSomos">
 		<section class="quienesSomosSection1">
-			<h2 class="quienesSomos__h1">Nuestra agencia de publicidad</h1>
-			<h2 class="quienesSomos__title">¿Quiénes somos?</h1>
+			<h2 class="quienesSomos__h1">Nuestra agencia de publicidad</h2>
+			<h2 class="quienesSomos__title">¿Quiénes somos?</h2>
 			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
 			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver más</a>
 		</section>
@@ -65,15 +76,21 @@
 	
 	<section  class="quienesSomos">
 		<section>
-			<img class="quienesSomos__img" src="./img/quienes_somos.jfif" alt="Nosotros">
+			<img class="quienesSomos__img" src="./img/quienes_somos2.png" alt="Nosotros">
 		</section>
 		<section class="quienesSomosSection1">
-			<h2 class="quienesSomos__title">¿Qué hacemos?</h2>
-			<p class="quienesSomos__text">Grupo Brand es una agencia de publicidad y diseño. Dispone de un equipo de profesionales experimentados en el área de comunicacion, publicidad ,diseño y fotografia. Honestidad, pasión, creatividad,personalidad y emoción son palabras que definen nuestro trabajo.</p>
+			<h2 class="quienesSomos__title">Nuestro trabajo</h2>
+			<p class="quienesSomos__text">Reconocidas empresas tanto de Argentina como del exterior 
+				ya han confiado en nuestro trabajo y aún continuan apostando por nuestro trabajo. 
+				Mitsubishi Chile, Caja Los Andes, Puerto Capital, Smart Rental, Pisalak, Centro Sport, etc.</p>
 			<a class="quienesSomos__button" href="./pages/quehacemos.html">Ver más</a>
 		</section>
 	</section>
-
+	<div class="iconText">
+		<p class="frase">"«Aprende las reglas como un profesional, 
+			para que puedas romperlas como un artista». Pablo Picasso</p>
+		<img src="./img/undraw_Designer_life_re_6ywf5.png" class="icon"> 
+	</div>
 	<div class="card-group" id="cardId">
 		<div class="card">
 		  <img class="card-img-top" src="./img/4.png" alt="Card image cap">
@@ -120,7 +137,7 @@
 		</div>
 	  </div>
 
-	  <h1 id="h1titles" class="animate__animated animate__bounce">¿Que hacemos?</h1>
+	  <h2 id="h1titles" class="animate__animated animate__bounce">¿Que hacemos?</h2>
 	<main id="grilla" >
 		<section id="IMG1" class="textWithBlurredBg">
 			<img src="./img/1.png" alt="IMG1" width="100%">
@@ -147,8 +164,42 @@
 			<h2>Diseño Web</h2>
 		</section>
 	</main>
-	<hr class="hr">
 	
+	<h2 id="h1titles" class="animate__animated animate__bounce">Nuestro Equipo</h2>
+	<div class="card mb-3" id="cardId">
+		<img class="card-img-top" src="img/c1.png" alt="Card image cap">			
+		<div class="card-body">
+		<h5 class="card-title" id="cardTitle">"Juan"</h5>
+		<p class="card-text" id="cardText">Convierte ideas abstractas en soluciones y planes prácticos. Actúa mejor en situaciones donde hay una sola respuesta correcta o una solución óptima a un problema. Mayor interés en la evaluación de ideas y la selección y planificación para la acción. Forma rápidamente relaciones, define problemas y conceptualiza nuevas ideas, oportunidades y beneficios. Destila en una explicación integrada observaciones aparentemente sin conexión. Muestra mayor interés en la definición del problema y en encontrar ideas.</p>
+		<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+		</div>
+	</div>
+	<div class="card mb-3" id="cardId">
+		<img class="card-img-top" src="img/c2.png" alt="Card image cap">
+		<div class="card-body">
+		<h5 class="card-title" id="cardTitle">"Turco"</h5>
+		<p class="card-text" id="cardText">Su principal interés está en hacer que las cosas se lleven a cabo.  Cree fervientemente en el “ensayo-error”, ya que no necesita la comprensión completa del problema para seguir adelante. Hace que las cosas “funcionen de algún modo”. Mayor interés en ganar aceptación e implementación. Hace que las cosas se inicien por medio de su propia participación. Imagina posibilidades y percibe todo tipo de problemas y nuevas oportunidades. Este cuadrante muestra mayor interés en encontrar problemas y en hechos relevantes entorno al problema.</p>
+		<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+		</div>
+	</div>
+	<h2 id="h1titles" class="animate__animated animate__bounce">Contactanos</h2>
+	<div class="iconText">
+		<img src="img/undraw_Designer_life_re_6ywf3.png" class="icon"> 
+		<form id="cardId" class="iconList3">
+			<div class="form-group">
+			<label for="exampleInputEmail1">Email address</label>
+			<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+			<small id="emailHelp" class="form-text text-muted">Ingresa tu email</small>
+			</div>
+			<div class="form-group">
+			<label for="exampleInputEmail1">¡Consulatnos!</label>
+			<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ej. Estoy interesado en contratat su servicio de Solcial media...">
+			<small id="emailHelp" class="form-text text-muted">¿En qué podemos ayudarte?</small>
+			</div>
+			<button type="submit" class="btn btn-primary" id="btButton">Enviar</button>
+		</form>
+	</div>
+	<hr class="hr">
 	<footer class="footer">
 		<picture class="footer__logo">
 			<img class="footer__img" src="img/logo3.png" alt="logo de la empresa">
@@ -164,7 +215,10 @@
 				<img class="mediaIcon"  src="img/icon_linkedin.png" alt="logo de linkedin">
 			</a>
 			<a href="https://github.com/juancampi">
-				<img class="mediaIcon"  src="img/icon_github.png" alt="logo de la Git Hub">
+				<img class="mediaIcon"  src="img/icon_github.png" alt="logo de Git Hub">
+			</a>
+			<a href="https://www.behance.net/juancampi96e2d/projects">
+				<img class="mediaIcon"  src="img/icon_behance.png" alt="logo de Behance">
 			</a>
 		</div>
 		<section>
