--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet"  href="../css/hamburguer.css" />
-	<link rel="stylesheet"  href="../css/styles.css" />
+	<!-- <link rel="stylesheet"  href="../css/styles.css" /> -->
+	<link rel="stylesheet"  href="../css/translated.css" />	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Contacto</title>
@@ -43,23 +44,25 @@
 
 	<div class="parallax5"> 
 	</div>
+	<h1 id="h1titles" class="animate__animated animate__bounce">Contactanos</h1>
 	<main>
-		<form id="cardId" >
-			<div class="form-group">
-			<label for="exampleInputEmail1">Email address</label>
-			<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-			<small id="emailHelp" class="form-text text-muted">Ingresa tu email</small>
-			</div>
-			<div class="form-group">
-			<label for="exampleInputPassword1">Password</label>
-			<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-			</div>
-			<div class="form-check">
-			<input type="checkbox" class="form-check-input" id="exampleCheck1">
-			<label class="form-check-label" for="exampleCheck1">Check me out</label>
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
+
+		<div class="iconText">
+			<img src="../img/undraw_Designer_life_re_6ywf3.png" class="icon"> 
+			<form id="cardId" class="iconList3">
+				<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+				<small id="emailHelp" class="form-text text-muted">Ingresa tu email</small>
+				</div>
+				<div class="form-group">
+				<label for="exampleInputEmail1">¡Consulatnos!</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ej. Estoy interesado en contratat su servicio de Solcial media...">
+				<small id="emailHelp" class="form-text text-muted">¿En qué podemos ayudarte?</small>
+				</div>
+				<button type="submit" class="btn btn-primary" id="btButton">Enviar</button>
+			</form>
+		</div>
 
 	</main>
 		
@@ -85,7 +88,10 @@
 				<img class="mediaIcon"  src="../img/icon_linkedin.png" alt="logo de linkedin">
 			</a>
 			<a href="https://github.com/juancampi">
-				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de la Git Hub">
+				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de Git Hub">
+			</a>
+			<a href="https://www.behance.net/juancampi96e2d/projects">
+				<img class="mediaIcon"  src="../img/icon_behance.png" alt="logo de Behance">
 			</a>
 		</div>
 		<section>
