--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+	content="Grupo Brand, mucho más que una agencia de publicidad">
+	<meta name="keywords"
+	content="Diseño Grafico, Publicidad, Agencia de publicidad, Fotografía, Branding, Redes sociales, RRSS">
 	<link rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet"  href="../css/hamburguer.css" />
 	<!-- <link rel="stylesheet"  href="../css/styles.css" /> -->
 	<link rel="stylesheet"  href="../css/translated.css" />
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Nosotros</title>
 </head>
 <body>
@@ -45,6 +49,7 @@
     <div class="parallax2"> 
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">Nosotros</h1>
+	<img src="../img/undraw_Designer_life_re_6ywf4.png" class="icon2"/>
 	<main>
 		<div class="card-group" id="cardId">
 			<div class="card">
@@ -111,7 +116,10 @@
 				<img class="mediaIcon"  src="../img/icon_linkedin.png" alt="logo de linkedin">
 			</a>
 			<a href="https://github.com/juancampi">
-				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de la Git Hub">
+				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de Git Hub">
+			</a>
+			<a href="https://www.behance.net/juancampi96e2d/projects">
+				<img class="mediaIcon"  src="../img/icon_behance.png" alt="logo de Behance">
 			</a>
 		</div>
 		<section>
