--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+	content="Grupo Brand, mucho más que una agencia de publicidad">
+	<meta name="keywords"
+	content="Diseño Grafico, Publicidad, Agencia de publicidad, Fotografía, Branding, Redes sociales, RRSS">
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet"  href="../css/hamburguer.css" />
 	<!-- <link rel="stylesheet"  href="../css/styles.css" /> -->
 	<link rel="stylesheet"  href="../css/translated.css" />
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| Nuestro equipo</title>
 </head>
 <body>
@@ -45,12 +49,13 @@
 	<div class="parallax4"> 
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">Nuestro Equipo</h1>
+	<img src="../img/undraw_Designer_life_re_6ywf3.png" class="icon2"/>
 	<main>
 		<div class="card mb-3" id="cardId">
 			<img class="card-img-top" src="../img/c1.png" alt="Card image cap">
 			<div class="card-body">
 			<h5 class="card-title" id="cardTitle">"Juan"</h5>
-			<p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<p class="card-text" id="cardText">Convierte ideas abstractas en soluciones y planes prácticos. Actúa mejor en situaciones donde hay una sola respuesta correcta o una solución óptima a un problema. Mayor interés en la evaluación de ideas y la selección y planificación para la acción. Forma rápidamente relaciones, define problemas y conceptualiza nuevas ideas, oportunidades y beneficios. Destila en una explicación integrada observaciones aparentemente sin conexión. Muestra mayor interés en la definición del problema y en encontrar ideas.</p>
 			<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
 			</div>
 		</div>
@@ -58,9 +63,14 @@
 			<img class="card-img-top" src="../img/c2.png" alt="Card image cap">
 			<div class="card-body">
 			<h5 class="card-title" id="cardTitle">"Turco"</h5>
-			<p class="card-text" id="cardText">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+			<p class="card-text" id="cardText">Su principal interés está en hacer que las cosas se lleven a cabo.  Cree fervientemente en el “ensayo-error”, ya que no necesita la comprensión completa del problema para seguir adelante. Hace que las cosas “funcionen de algún modo”. Mayor interés en ganar aceptación e implementación. Hace que las cosas se inicien por medio de su propia participación. Imagina posibilidades y percibe todo tipo de problemas y nuevas oportunidades. Este cuadrante muestra mayor interés en encontrar problemas y en hechos relevantes entorno al problema.</p>
 			<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
 			</div>
+		</div>
+		<div class="iconText">
+			<p class="frase">"«Aprende las reglas como un profesional, 
+				para que puedas romperlas como un artista». Pablo Picasso</p>
+			<img src="../img/undraw_Designer_life_re_6ywf2.png" class="icon"> 
 		</div>
 	</main>
 	<hr class="hr">
@@ -79,7 +89,10 @@
 				<img class="mediaIcon"  src="../img/icon_linkedin.png" alt="logo de linkedin">
 			</a>
 			<a href="https://github.com/juancampi">
-				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de la Git Hub">
+				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de Git Hub">
+			</a>
+			<a href="https://www.behance.net/juancampi96e2d/projects">
+				<img class="mediaIcon"  src="../img/icon_behance.png" alt="logo de Behance">
 			</a>
 		</div>
 		<section>
