--- a/pages/quehacemos.html
+++ b/pages/quehacemos.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+	content="Grupo Brand, mucho más que una agencia de publicidad">
+	<meta name="keywords"
+	content="Diseño Grafico, Publicidad, Agencia de publicidad, Fotografía, Branding, Redes sociales, RRSS">
 	<link  rel="icon"   href="../img/logo3.png" type="image/png" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link rel="stylesheet"  href="../css/hamburguer.css" />
 	<!-- <link rel="stylesheet"  href="../css/styles.css" /> -->
 	<link rel="stylesheet"  href="../css/translated.css" />
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>GB| ¿Que hacemos?</title>
 </head>
 <body>
@@ -45,6 +49,63 @@
 	<div class="parallax3"> 
 	</div>
 	<h1 id="h1titles" class="animate__animated animate__bounce">¿Qué hacemos?</h1>
+	<div class="iconText">
+		<img src="../img/undraw_Designer_life_re_6ywf.png" class="icon"> 
+		<ul class="iconList">
+			<li>
+				<p class="iconList2">Publicidad</p>
+			</li>
+			<li>
+				<p class="iconList2">Diseño Gráfico</p>
+			</li>
+			<li>
+				<p class="iconList2">Diseño Web</p>
+			</li>
+			<li>
+				<p class="iconList2">Branding</p>
+			</li>
+			<li>
+				<p class="iconList2">Social Media</p>
+			</li>
+			<li>
+				<p class="iconList2">Fotografía</p>
+			</li>
+		</ul>
+	</div>
+
+	<h2 id="h1titles" class="animate__animated animate__bounce">Tarifas</h2>
+	<div id="tableId">
+	  <table class="table">
+		  <thead>
+		  <tr>
+			  <!-- <th scope="col"></th> -->
+			  <th scope="col" class="tableTitle">Servicios</th>
+			  <th scope="col" class="tableTitle">Precio</th>
+			  <th scope="col" class="tableTitle">Duración</th>
+		  </tr>
+		  </thead>
+		  <tbody>
+		  <tr>
+			  <!-- <th scope="row"></th> -->
+			  <td class="tableText">Gestión de redes sociales</td>
+			  <td class="tableText">$4.000/ mes</td>
+			  <td class="tableText">Mensual</td>
+		  </tr>
+		  <tr>
+			  <!-- <th scope="row"></th> -->
+			  <td class="tableText">Branding</td>
+			  <td class="tableText">$13.000</td>
+			  <td class="tableText">1 Mes</td>
+		  </tr>
+		  <tr>
+			  <!-- <th scope="row"></th> -->
+			  <td class="tableText">Diseño Web</td>
+			  <td class="tableText">$25.000</td>
+			  <td class="tableText">1 Mes</td>
+		  </tr>
+		  </tbody>
+	  </table>
+  </div>
 
 	<main id="grilla" >
 		<section id="IMG1" class="textWithBlurredBg" >
@@ -73,39 +134,7 @@
 		</section>
 	</main>
 
-	  <h1 id="h1titles" class="animate__animated animate__bounce">Tarifas</h1>
-	  <div id="tableId">
-		<table class="table">
-			<thead>
-			<tr>
-				<!-- <th scope="col"></th> -->
-				<th scope="col">Servicios</th>
-				<th scope="col">Precio</th>
-				<th scope="col">Duración</th>
-			</tr>
-			</thead>
-			<tbody>
-			<tr>
-				<!-- <th scope="row"></th> -->
-				<td>Gestión de redes sociales</td>
-				<td>$4.000/ mes</td>
-				<td>Mensual</td>
-			</tr>
-			<tr>
-				<!-- <th scope="row"></th> -->
-				<td>Branding</td>
-				<td>$13.000</td>
-				<td>1 Mes</td>
-			</tr>
-			<tr>
-				<!-- <th scope="row"></th> -->
-				<td>Diseño Web</td>
-				<td>$25.000</td>
-				<td>1 Mes</td>
-			</tr>
-			</tbody>
-		</table>
-	</div>
+
 	<hr class="hr">
 	<footer class="footer">
 		<picture class="footer__logo">
@@ -122,7 +151,10 @@
 				<img class="mediaIcon"  src="../img/icon_linkedin.png" alt="logo de linkedin">
 			</a>
 			<a href="https://github.com/juancampi">
-				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de la Git Hub">
+				<img class="mediaIcon"  src="../img/icon_github.png" alt="logo de Git Hub">
+			</a>
+			<a href="https://www.behance.net/juancampi96e2d/projects">
+				<img class="mediaIcon"  src="../img/icon_behance.png" alt="logo de Behance">
 			</a>
 		</div>
 		<section>
